<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="string">String</string>
    <string name="server">Server</string>
    <string name="connect">Connect</string>
    <string name="client">Client</string>
    <string name="port">Port</string>
    <string name="address">Address</string>
    <string name="get">Get</string>
    <string name="city">City</string>
</resources>
